# Project_angus-faik

./: .gitpod.yml  CMakeLists.txt  LICENSE
.devcontainer/: devcontainer.json
Projektentwurf/: CMakeLists.txt  run_cmake.sh
Projektentwurf/Test/: tests.cpp
Projektentwurf/include/: developer.hpp
Projektentwurf/logos/: spiderman.txt  wonderwoman.txt
Projektentwurf/src/: developer.cpp  junior_developer.cpp  main.cpp
Projektentwurf/test/: test_developer_struct.cpp
